# VulkanFromScratch

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
documents/: manual.txt
feature/: RBGBufferPass.cpp  RBGBufferPass.h  RBLightingPass.cpp  RBLightingPass.h  RBSkyPass.cpp  RBSkyPass.h  lightingPass.cpp  lightingPass.h
shader/: compile.bat  compile.sh  frag.spv  gBuffer.frag  gBuffer.vert  gBufferFrag.spv  gBufferVert.spv  lighting.frag  lighting.vert  lightingFrag.spv  lightingVert.spv  shader.frag  shader.vert  sky.frag  sky.vert  vert.spv
src/: AppMain.cpp  AppMainAndroid.cpp  RBApplication.cpp  RBApplication.h  RBBuffer.cpp  RBBuffer.h  RBBufferManager.cpp  RBBufferManager.h  RBCamera.h  RBCameraManager.h  RBCommandBuffer.cpp  RBCommandBuffer.h  RBCommon.cpp  RBCommon.h  RBDescriptorManager.cpp  RBDescriptorManager.h  RBDescriptorPool.cpp  RBDescriptorPool.h  RBDescriptorPoolManager.cpp  RBDescriptorPoolManager.h  RBDescriptorSet.cpp  RBDescriptorSet.h  RBDescriptorSetLayout.cpp  RBDescriptorSetLayout.h  RBDescriptorSetLayoutManager.cpp  RBDescriptorSetLayoutManager.h  RBDescriptorSetManager.cpp  RBDescriptorSetManager.h  RBDescriptors.cpp  RBDescriptors.h  RBDescriptors.impl.h  RBDevice.cpp  RBDevice.h  RBEditorCameraManager.cpp  RBEditorCameraManager.h  RBGBufferPass.cpp  RBGBufferPass.h  RBGUI.cpp  RBGUI.h  RBGraphicPipeline.cpp  (+40 more)
